project upgrade - upgrade to spring-boot 3.0.2; - upgrade to springdoc-openapi 2.0.2; - upgrade to mapstruct 1.5.3.Final; - replace openjdk to amazoncorretto with version 17.0.6; - upgrade to confluent pom depensency and docker images 7.3.1; - upgrade to mysql docker image 8.0.32; - upgrade to elasticsearch docker image 8.5.3.