@@ -2,10 +2,11 @@ package com.ivanfranchin.storeapi.rest;
 
 import com.ivanfranchin.storeapi.mapper.CustomerMapper;
 import com.ivanfranchin.storeapi.model.Customer;
-import com.ivanfranchin.storeapi.rest.dto.CustomerResponse;
-import com.ivanfranchin.storeapi.service.CustomerService;
 import com.ivanfranchin.storeapi.rest.dto.AddCustomerRequest;
+import com.ivanfranchin.storeapi.rest.dto.CustomerResponse;
 import com.ivanfranchin.storeapi.rest.dto.UpdateCustomerRequest;
+import com.ivanfranchin.storeapi.service.CustomerService;
+import jakarta.validation.Valid;
 import lombok.RequiredArgsConstructor;
 import org.springframework.http.HttpStatus;
 import org.springframework.web.bind.annotation.DeleteMapping;
@@ -18,9 +19,7 @@ import org.springframework.web.bind.annotation.RequestMapping;
 import org.springframework.web.bind.annotation.ResponseStatus;
 import org.springframework.web.bind.annotation.RestController;
 
-import javax.validation.Valid;
 import java.util.List;
-import java.util.stream.Collectors;
 
 @RequiredArgsConstructor
 @RestController
@@ -35,7 +34,7 @@ public class CustomerController {
         return customerService.getAllCustomers()
                 .stream()
                 .map(customerMapper::toCustomerResponse)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     @GetMapping("/{id}")
